Fix uneven padding issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
 body {
   font-family: Arial, sans-serif;
   padding-left: 5em;
+  padding-right: 5em;
   padding-top: 3em;
 
   background-image: url("https://media.discordapp.net/attachments/993702831850786886/1117894163686510752/bgJC_copy.jpg");
